Separated out services for charts,some css fix

--- a/Frontend/src/app/components/admin-analytics/admin-analytics.scss
+++ b/Frontend/src/app/components/admin-analytics/admin-analytics.scss
@@ -70,6 +70,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     gap: 2rem;
+    padding : 2rem;
 
     .chart-container {
       background: white;
