--- a/Frontend/src/app/components/organizer-analytics/organizer-analytics.scss
+++ b/Frontend/src/app/components/organizer-analytics/organizer-analytics.scss
@@ -1,6 +1,6 @@
 
 .analytics-container {
-  padding: 24px;
+  padding: 0px;
   background-color: #f8f9fa;
   min-height: 100vh;
 
@@ -154,6 +154,8 @@
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 24px;
     margin-bottom: 32px;
+    margin-top: 2.5rem;
+    padding :2rem;
 
     @media (max-width: 768px) {
       grid-template-columns: 1fr;
@@ -227,6 +229,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 24px;
+    padding : 2rem;
+    
 
     @media (max-width: 768px) {
       grid-template-columns: 1fr;
